Material Design 2 UI Update (#38)
* Update icon style

Signed-off-by: Fung Gwo <fython@163.com>

* Remove colors_material.xml & Update style

Signed-off-by: Fung Gwo <fython@163.com>

--- a/manager/src/main/res/drawable/ic_send_24dp.xml
+++ b/manager/src/main/res/drawable/ic_send_24dp.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="?android:textColorSecondary"
-        android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
+        android:fillColor="?appColorPrimary"
+        android:pathData="M4.01,6.03l7.51,3.22 -7.52,-1 0.01,-2.22m7.5,8.72L4,17.97v-2.22l7.51,-1M2.01,3L2,10l15,2 -15,2 0.01,7L23,12 2.01,3z"/>
 </vector>
