--- a/manager/src/main/res/layout/item_home_manage_apps.xml
+++ b/manager/src/main/res/layout/item_home_manage_apps.xml
@@ -2,42 +2,43 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
-    style="?homeCardStyle">
+    style="?homeCardStyle"
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
 
     <moe.shizuku.manager.widget.MaterialCircleIconView
         android:id="@android:id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:duplicateParentState="true"
         android:importantForAccessibility="no"
         android:src="@drawable/ic_settings_outline_24dp"
-        android:duplicateParentState="true"
-        app:iconColorName="indigo"/>
+        app:iconColorName="indigo" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:orientation="vertical"
-        android:duplicateParentState="true">
+        android:duplicateParentState="true"
+        android:orientation="vertical">
 
         <moe.shizuku.support.widget.HtmlCompatTextView
             android:id="@android:id/text1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textAppearance="@android:style/TextAppearance.Material.Body2"
             android:duplicateParentState="true"
-            tools:htmlText="Authorized 0 application to get token without confirmation" />
+            android:textAppearance="@android:style/TextAppearance.Material.Body2"
+            android:textSize="16sp"
+            tools:htmlText="@plurals/authorized_apps_count" />
 
         <moe.shizuku.support.widget.HtmlCompatTextView
             android:id="@android:id/text2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="2sp"
-            android:textSize="14sp"
-            android:textColor="?android:textColorSecondary"
             android:duplicateParentState="true"
+            android:textColor="?android:textColorSecondary"
+            android:textSize="14sp"
             app:htmlText="@string/view_authorized_apps" />
 
     </LinearLayout>
