add source code link to about dialog

--- a/manager/src/main/res/layout/dialog_about.xml
+++ b/manager/src/main/res/layout/dialog_about.xml
@@ -1,45 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     android:padding="24dp">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:importantForAccessibility="no"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp">
+        android:layout_marginStart="16dp"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
-            android:textSize="18sp"
-            android:textAppearance="@android:style/TextAppearance.Material.Body1"/>
+            android:textAppearance="@android:style/TextAppearance.Material.Body1"
+            android:textSize="18sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/versionName"
+            android:textSize="14sp" />
+
+        <moe.shizuku.support.widget.HtmlCompatTextView
+            android:id="@+id/source_code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="?android:textColorSecondary"
             android:textSize="14sp"
-            android:text="@string/versionName"/>
+            app:htmlText="@string/about_source_code" />
 
         <TextView
             android:id="@+id/icon_credits"
-            android:layout_marginTop="24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:layout_marginTop="24dp"
             android:textColor="?android:textColorSecondary"
-            tools:text="@string/about_icon_credits"/>
+            android:textSize="14sp"
+            tools:text="@string/about_icon_credits" />
 
     </LinearLayout>
 
