--- a/manager/src/main/res/values/dimens.xml
+++ b/manager/src/main/res/values/dimens.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin">0dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="request_dialog_text_size">18sp</dimen>
 
     <dimen name="list_padding">16dp</dimen>
 
+    <dimen name="toolbar_content_padding_start">16dp</dimen>
+    <dimen name="toolbar_content_padding_start_with_navigation">72dp</dimen>
+    <dimen name="toolbar_padding_end">0dp</dimen>
+
+    <dimen name="home_padding">0dp</dimen>
 </resources>
