Rename all remaining "Shizuku Manager"

--- a/manager/src/main/res/layout/item_applist.xml
+++ b/manager/src/main/res/layout/item_applist.xml
@@ -35,7 +35,7 @@
             android:textSize="16sp"
             android:textAppearance="@android:style/TextAppearance.Material"
             android:fontFamily="sans-serif-medium"
-            tools:text="Shizuku Manager"/>
+            tools:text="Shizuku"/>
 
         <TextView
             android:id="@android:id/summary"
