--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -4,3 +4,9 @@ code
 
 body
   font-family Roboto, sans-serif
+
+body:lang(zh-hans)
+  font-family Roboto, 'Noto Sans SC', sans-serif
+
+body:lang(zh-hant)
+  font-family Roboto, 'Noto Sans TC', sans-serif
