--- a/manager/src/main/res/values/styles.xml
+++ b/manager/src/main/res/values/styles.xml
@@ -31,7 +31,7 @@
     </style>
 
     <style name="CardButton">
-        <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="android:background">@drawable/card_btn_background</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">56dp</item>
         <item name="android:gravity">center_vertical</item>
