--- a/manager/src/main/res/animator/raise.xml
+++ b/manager/src/main/res/animator/raise.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="UnusedResources">
     <item
         android:state_enabled="true"
         android:state_pressed="true">
