--- a/manager/src/main/res/layout/dialog_about.xml
+++ b/manager/src/main/res/layout/dialog_about.xml
@@ -8,15 +8,15 @@
     android:padding="24dp">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:importantForAccessibility="no"
         android:src="@drawable/ic_launcher" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:orientation="vertical">
 
         <TextView
