--- a/manager/src/main/res/layout/item_home_start_adb.xml
+++ b/manager/src/main/res/layout/item_home_start_adb.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="?homeCardStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    style="?homeCardStyle"
     android:paddingStart="0dp"
     android:paddingEnd="0dp"
     android:paddingBottom="8dp">
@@ -12,52 +12,72 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:gravity="center_vertical">
+        android:paddingEnd="16dp">
 
         <moe.shizuku.manager.widget.MaterialCircleIconView
             android:id="@android:id/icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:duplicateParentState="true"
             android:importantForAccessibility="no"
             android:src="@drawable/ic_adb_24dp"
-            android:duplicateParentState="true"
-            app:iconColorName="teal"/>
+            app:iconColorName="teal" />
 
         <moe.shizuku.support.widget.HtmlCompatTextView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textAppearance="@android:style/TextAppearance.Material.Body2"
             android:layout_marginStart="16dp"
+            android:layout_weight="1"
+            android:textAppearance="@android:style/TextAppearance.Material.Body2"
+            android:textSize="16sp"
             app:htmlText="@string/start_service_title_adb" />
+
+        <moe.shizuku.manager.widget.CheckedImageView
+            android:id="@android:id/text2"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="8dp"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:scaleType="centerInside"
+            android:src="@drawable/btn_expand_material_anim_24dp"
+            android:tint="?android:textColorSecondary"
+            android:tintMode="src_in" />
 
     </LinearLayout>
 
-    <moe.shizuku.support.widget.HtmlCompatTextView
-        android:id="@android:id/text1"
+    <moe.shizuku.manager.widget.ExpandableLayout
+        android:id="@+id/expandable"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:textColor="?android:textColorSecondary"
-        app:htmlFlags="trim_whitespace"
-        app:htmlText="@string/start_service_summary_adb" />
+        android:layout_marginBottom="16dp"
+        app:isExpanded="true">
+
+        <moe.shizuku.support.widget.HtmlCompatTextView
+            android:id="@android:id/text1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:textColor="?android:textColorSecondary"
+            app:htmlFlags="trim_whitespace"
+            app:htmlText="@string/start_service_summary_adb" />
+
+    </moe.shizuku.manager.widget.ExpandableLayout>
 
     <TextView
         android:id="@android:id/button1"
-        android:text="@string/view_online_help"
+        style="@style/CardButton"
         android:drawableStart="@drawable/ic_help_outline_24dp"
-        style="@style/CardButton" />
+        android:text="@string/view_online_help" />
 
     <TextView
         android:id="@android:id/button2"
-        android:text="@string/view_command"
+        style="@style/CardButton"
         android:drawableStart="@drawable/ic_code_24dp"
-        style="@style/CardButton" />
+        android:text="@string/view_command" />
 
 </LinearLayout>
