--- a/manager/src/main/res/values/arrays.xml
+++ b/manager/src/main/res/values/arrays.xml
@@ -15,6 +15,7 @@
     <string-array name="language" translatable="false">
         <item>@string/night_mode_follow_system</item>
         <item>en-US</item>
+        <item>uk</item>
         <item>zh-CN</item>
         <item>zh-HK</item>
         <item>zh-TW</item>
@@ -22,6 +23,7 @@
 
     <string-array name="language_value" translatable="false">
         <item>SYSTEM</item>
+        <item>uk</item>
         <item>en-US</item>
         <item>zh-CN</item>
         <item>zh-HK</item>
