--- a/manager/src/main/res/layout/item_home_learn_more.xml
+++ b/manager/src/main/res/layout/item_home_learn_more.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     style="?homeCardStyle"
     android:gravity="center_vertical"
     android:orientation="horizontal">
@@ -22,7 +21,7 @@
         android:duplicateParentState="true"
         android:orientation="vertical">
 
-        <moe.shizuku.support.widget.HtmlCompatTextView
+        <rikka.html.widget.HtmlCompatTextView
             android:id="@android:id/text1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -31,7 +30,7 @@
             android:textSize="16sp"
             app:htmlText="@string/learn_more" />
 
-        <moe.shizuku.support.widget.HtmlCompatTextView
+        <rikka.html.widget.HtmlCompatTextView
             android:id="@android:id/text2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
