--- a/manager/src/main/res/values/arrays.xml
+++ b/manager/src/main/res/values/arrays.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string-array name="night_mode" tools:ignore="InconsistentArrays">
-        <item>@string/night_mode_off</item>
-        <item>@string/night_mode_on</item>
-        <item>@string/night_mode_auto</item>
+        <item>@string/dark_theme_off</item>
+        <item>@string/dark_theme_on</item>
+        <item>@string/dark_theme_auto_time</item>
     </string-array>
 
     <integer-array name="night_mode_value" tools:ignore="InconsistentArrays">
@@ -13,7 +13,7 @@
     </integer-array>
 
     <string-array name="language" translatable="false">
-        <item>@string/night_mode_follow_system</item>
+        <item>@string/follow_system</item>
         <item>en-US</item>
         <item>zh-CN</item>
         <item>zh-HK</item>
