--- a/manager/src/main/res/layout/activity_main.xml
+++ b/manager/src/main/res/layout/activity_main.xml
@@ -7,31 +7,25 @@
     android:clipToPadding="false"
     android:orientation="vertical">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <rikka.material.widget.BorderRecyclerView
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:paddingStart="@dimen/home_padding"
-        android:paddingEnd="@dimen/home_padding"
         android:clipToPadding="false"
-        android:paddingTop="?android:actionBarSize"
-        android:paddingBottom="4dp"
+        android:fitsSystemWindows="true"
+        android:paddingStart="@dimen/home_padding"
+        android:paddingTop="?actionBarSize"
+        android:paddingEnd="@dimen/home_padding"
         android:scrollbarStyle="outsideOverlay"
         android:scrollbars="vertical"
+        app:borderBottomStyle="never"
+        app:borderTopDrawable="@null"
+        app:borderTopStyle="whenTop"
         app:layoutManager="@string/main_layout_manager"
         app:spanCount="2">
 
-    </androidx.recyclerview.widget.RecyclerView>
-
-    <moe.shizuku.support.design.RaisedToolbar
-        android:id="@+id/toolbar"
-        style="?android:actionBarStyle"
-        android:elevation="0dp"
-        android:layout_width="match_parent"
-        android:layout_height="?android:actionBarSize"
-        android:background="?android:colorPrimary"
-        android:stateListAnimator="@animator/raise_animator" />
+    </rikka.material.widget.BorderRecyclerView>
 
 </FrameLayout>
