--- a/manager/src/main/res/layout/item_home_server_status.xml
+++ b/manager/src/main/res/layout/item_home_server_status.xml
@@ -21,7 +21,7 @@
         android:duplicateParentState="true"
         android:orientation="vertical">
 
-        <moe.shizuku.support.widget.HtmlCompatTextView
+        <rikka.html.widget.HtmlCompatTextView
             android:id="@android:id/text1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -31,7 +31,7 @@
             android:textSize="16sp"
             tools:text="Running (version 10)" />
 
-        <moe.shizuku.support.widget.HtmlCompatTextView
+        <rikka.html.widget.HtmlCompatTextView
             android:id="@android:id/text2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
