--- a/manager/src/main/res/layout/item_home_start_root.xml
+++ b/manager/src/main/res/layout/item_home_start_root.xml
@@ -26,7 +26,7 @@
             android:src="@drawable/ic_play_arrow_outline_24dp"
             app:iconColorName="orange" />
 
-        <moe.shizuku.support.widget.HtmlCompatTextView
+        <rikka.html.widget.HtmlCompatTextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -55,7 +55,7 @@
         android:layout_marginBottom="16dp"
         app:isExpanded="true">
 
-        <moe.shizuku.support.widget.HtmlCompatTextView
+        <rikka.html.widget.HtmlCompatTextView
             android:id="@android:id/text1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
